Fix repository name in base path configuration

--- a/public/404.html
+++ b/public/404.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <script>
-      window.location.href = '/fintech-template-0729/';
+      window.location.href = '/kivo-web/';
     </script>
   </body>
 </html>
