--- a/public/404.html
+++ b/public/404.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <script>
-      window.location.href = '/kivo-web/';
+      window.location.href = '/';
     </script>
   </body>
 </html>
