Update GitHub Pages deployment with latest changes
- Updated Footer component
- Modified Blog page
- Enhanced HeroSection component
- Improved TaskBoard functionality
- Updated styling in index.css
- Optimized vite configuration
- Updated main HTML file

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
+    <!-- Preload critical resources -->
+    <link rel="modulepreload" href="/src/main.tsx">
+    <link rel="modulepreload" href="/src/App.tsx">
+    <link rel="modulepreload" href="/src/pages/Index.tsx">
+    
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
