--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cosmos Tasks | Modern Task Management For Teams</title>
-    <meta name="description" content="Streamline your workflow with our intuitive task management platform. Designed for modern teams who value clarity, focus, and results." />
-    <meta name="author" content="Cosmos Tasks" />
+    <title>Kivo – AI-Powered Game Pricing Engine for Live Economy</title>
+    <meta name="description" content="Optimize your in-game economy with Kivo. Our AI adjusts prices, rewards, and monetization tools in real time to boost engagement, retention, and revenue." />
+    <meta name="author" content="Kivo" />
 
-    <meta property="og:title" content="Cosmos Tasks | Modern Task Management For Teams" />
-    <meta property="og:description" content="Streamline your workflow with our intuitive task management platform. Designed for modern teams who value clarity, focus, and results." />
+    <meta property="og:title" content="Kivo – AI-Powered Game Pricing Engine for Live Economy" />
+    <meta property="og:description" content="Optimize your in-game economy with Kivo. Our AI adjusts prices, rewards, and monetization tools in real time to boost engagement, retention, and revenue." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@cosmos_tasks" />
+    <meta name="twitter:site" content="@kivo" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
