Enhance website with favicon support and improve BlogPost component by removing unused share links and optimizing author information display. Update HeroSection to streamline UI and refine NewsletterSubscription for better user experience with improved animations and error handling. Add related reading sections to blog articles for better navigation.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <meta name="description" content="Optimize your in-game economy with Kivo. Our AI adjusts prices, rewards, and monetization tools in real time to boost engagement, retention, and revenue." />
     <meta name="author" content="Kivo" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
+
     <meta property="og:title" content="Kivo – AI-Powered Game Pricing Engine for Live Economy" />
     <meta property="og:description" content="Optimize your in-game economy with Kivo. Our AI adjusts prices, rewards, and monetization tools in real time to boost engagement, retention, and revenue." />
     <meta property="og:type" content="website" />
